<?xml version="1.0" encoding="UTF-8"?>
<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
  <modelVersion>4.0.0</modelVersion>

  <groupId>info.limpet</groupId>
  <artifactId>parent</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <packaging>pom</packaging>

  <properties>
    <tycho.version>0.23.1</tycho.version>
    <tycho-extras.version>0.23.1</tycho-extras.version>
    <tycho-repo.url>https://oss.sonatype.org/content/groups/public/</tycho-repo.url>
  </properties>

  <modules>
    <module>info.limpet</module>
    <module>info.limpet.libs</module>
    <module>info.limpet.geotools</module>
    <module>info.limpet.rcp</module>
    <module>info.limpet.test</module>
    <module>info.limpet.feature</module>
    <module>info.limpet.rcp.feature</module>
    <module>info.limpet.site</module>
    <module>info.limpet.product</module>
  </modules>

  <build>
    <plugins>
      <plugin>
        <groupId>org.eclipse.tycho</groupId>
        <artifactId>tycho-maven-plugin</artifactId>
        <version>${tycho.version}</version>
        <extensions>true</extensions>
      </plugin>
      <plugin>  
         <groupId>org.eclipse.tycho</groupId>  
         <artifactId>target-platform-configuration</artifactId>  
         <version>${tycho.version}</version>  
         <configuration>  
         <target>  
           <artifact>  
             <groupId>info.limpet</groupId>  
             <artifactId>eclipse38</artifactId>  
             <version>0.0.1-SNAPSHOT</version>  
           </artifact>  
         </target>  
          <environments>
<!--
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86</arch>
            </environment>
-->
            <environment>
              <os>linux</os>
              <ws>gtk</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86</arch>
            </environment>
            <environment>
              <os>win32</os>
              <ws>win32</ws>
              <arch>x86_64</arch>
            </environment>
            <environment>
              <os>macosx</os>
              <ws>cocoa</ws>
              <arch>x86_64</arch>
            </environment>
          </environments>
         </configuration>  
      </plugin>  
      <plugin>
	<groupId>org.eclipse.tycho</groupId>
	<artifactId>tycho-surefire-plugin</artifactId>
	<version>${tycho.version}</version>
	<configuration>
  	  <useUIHarness>true</useUIHarness>
	  <useUIThread>true</useUIThread>
	  <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dorg.eclipse.ui.testsDisableWorkbenchAutoSave=true -DbuildMode=true</argLine>
	  <product>org.eclipse.platform.ide</product>
	  <application>org.eclipse.ui.ide.workbench</application>
	  <dependencies>
		<dependency>
			<type>p2-installable-unit</type>
			<artifactId>org.eclipse.platform</artifactId>
			<version>0.0.0</version>
		</dependency>

	  </dependencies>
	  <includes>
		<include>**/AllTests.class</include>
		<include>**/*AllTests*.class</include>
		<include>**/*AllBotTests*.class</include>
		<include>**/*TestSuite*.class</include>
	  </includes>
	</configuration>
	</plugin>
	<plugin>
		<groupId>org.eclipse.tycho</groupId>
		<artifactId>tycho-compiler-plugin</artifactId>
		<version>${tycho.version}</version>
		<configuration>
			<encoding>UTF-8</encoding>
			<source>1.7</source>
			<target>1.7</target>
			<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
		</configuration>
	</plugin>
    </plugins>
  </build>
  <profiles> 
    <profile> 
      <id>mac</id>
      <activation>
        <os>
          <family>mac</family>
        </os>
      </activation>
      <build>
        <plugins>
          <plugin>
            <groupId>org.eclipse.tycho</groupId>
            <artifactId>tycho-surefire-plugin</artifactId>
            <version>${tycho.version}</version>
            <configuration>
	      <argLine>-Xms512m -Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=256m -Dorg.eclipse.ui.testsDisableWorkbenchAutoSave=true -XstartOnFirstThread</argLine>
            </configuration>
          </plugin>
        </plugins>
      </build> 
    </profile> 
  </profiles> 
</project>
